# bereal-telegram-bot

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
src/: bot.py  dashboard.py  db.py  schemas.py  settings.py
src/templates/: dashboard.html
